<resources>
    <string name="app_name">Room.io</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enter_username_text">Enter Username</string>
    <string name="enter_password_text">password</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="sign_up_button_text">New? Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="name_text">Name:</string>
    <string name="password_text">Password:</string>
    <string name="email_text">Email:</string>
    <string name="username_text">Username:</string>
    <string name="re_enter_password">Re-enter password:</string>
    <string name="your_name">Your Name</string>
    <string name="your_email">Your Email</string>
    <string name="intended_username">Intended Username</string>
    <string name="intended_password">Intended Password</string>
    <string name="roommate_gc">Roommate Group Chat</string>
    <string name="house_tasks">Household Tasks</string>
    <string name="my_tabs">My Tabs</string>
    <string name="my_notifications">My Notifications</string>
    <string name="create_group">Create Household</string>
    <string name="title_activity_notifications">NotificationsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_group">CreateGroupActivity</string>
    <string name="room_io_navigation">Room.io Navigation</string>
    <string name="title_activity_my_tabs">MyTabsActivity</string>
    <string name="title_activity_house_tasks">HouseTasksActivity</string>
    <string name="title_activity_group_chat">GroupChatActivity</string>
    <string name="title_activity_parent_drawer">ParentDrawerActivity</string>
    <string name="assignee">Assignee</string>
    <string name="assigner">Assigner</string>
    <string name="default_money">$999.99</string>
    <string name="name_of_tab">Name of Tab</string>
    <string name="enter_a_new_group_name">Enter a new group name:</string>
    <string name="delete_roommates">Delete roommates</string>
    <string name="add_roommates">Add roommates</string>
    <string name="group_name">Group name</string>
    <string name="enter_a_username">Enter a username:</string>
    <string name="save_changes">Save changes</string>
    <string name="send">Send</string>
    <string name="enter_message">Enter Message</string>
    <string name="message_text">Message text</string>
    <string name="gc_username">Username</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="task_name">Task Name</string>
    <string name="enter_task_description">Enter task description:</string>
    <string name="save_task">Save Task</string>
    <string name="tab_name">Tab Name</string>
    <string name="reason">Reason</string>
    <string name="save_tab">Save Tab</string>
    <string name="enter_reason_for_tab">Enter reason for tab:</string>
    <string name="amount">Amount</string>
    <string name="no_sender">Could not determine sender.</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
