<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.CreateGroupActivity"
    tools:showIn="@layout/app_bar_create_group">


    <EditText
        android:id="@+id/addEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/deleteRoommates"
        app:layout_constraintStart_toStartOf="@+id/deleteRoommates"
        app:layout_constraintTop_toBottomOf="@+id/addRoommates" />

    <TextView
        android:id="@+id/groupName"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="76dp"
        android:text="@string/group_name"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/groupNameEdit"
        app:layout_constraintStart_toStartOf="@+id/groupNameEdit"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addRoommates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/add_roommates"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/addEditText"
        app:layout_constraintStart_toStartOf="@+id/addEditText"
        app:layout_constraintTop_toBottomOf="@+id/groupNameEdit" />

    <TextView
        android:id="@+id/deleteRoommates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/delete_roommates"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        app:layout_constraintTop_toBottomOf="@+id/addEditText" />

    <EditText
        android:id="@+id/groupNameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/addRoommates"
        app:layout_constraintStart_toStartOf="@+id/addRoommates"
        app:layout_constraintTop_toBottomOf="@+id/groupName" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#CDC8C7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteRoommates"
        app:layout_constraintVertical_bias="0.074" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="8dp"
        android:text="@string/save_changes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>